--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel='stylesheet' href='style.css' />
     </head>
     <body>
-	<p>Hola</p>		
+	<p>Hola que tal</p>		
         <audio id="clearsound" src="sound/pop.ogg" preload="auto"></audio>
         <canvas width='300' height='600'></canvas>
         <button id="playbutton" onclick="playButtonClicked();">Play</button>
